[tool.poetry]
name = "flask-construye-aplicaciones-web-profesionales-con-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_construye_aplicaciones_web_profesionales_con_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
